--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -24,9 +25,11 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "16.0.4",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
