--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "16.0.4",
@@ -31,6 +32,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
