--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
